#Commit 11/05/2022: Add template delete course register.

--- a/src/resource/views/components/clients/clientDetail.hbs
+++ b/src/resource/views/components/clients/clientDetail.hbs
@@ -109,13 +109,14 @@
                         <label class="form-group--label" for="Method">Chức năng</label>
                         <div class="form-group">
                             <button type="button" class="btn-executed btn" id="register" disabled="true">Thêm khóa học</button>
-                            <button type="button" class="btn-executed btn" disabled="true">Xóa khóa học</button>
+                            <button type="button" class="btn-executed btn" id="unRegister" disabled="true">Xóa khóa học</button>
                         </div>
                     </div>
                     
                     <div class="col-12 mb-3">
                         <div>
-                            <label class="form-group--label" for="Gender">Các khóa vừa đăng ký đăng ký</label>
+                            <input class="align-middle" type="checkbox" id="check-all-course">
+                            <label class="form-group--label" for="Gender">Chọn tất cả</label>
                         </div>
                         <div class="page-detail-register__content" id="register-content"></div>
                     </div>
