#Commit 12/05/2022: Refactor upload priture client.

--- a/src/resource/views/components/clients/clientDetail.hbs
+++ b/src/resource/views/components/clients/clientDetail.hbs
@@ -20,9 +20,9 @@
         <div class="page-detail">
             {{!-- PRICTURE --}}
             <div class="page-detail--information">
-                <div class="page-detail--roll-back"><i class="fa fa-angle-double-left" aria-hidden="true"></i></div>
+                <div class="page-detail--roll-back" id="roll-back"><i class="fa fa-angle-double-left" aria-hidden="true"></i></div>
                 <h2 class="page-detail--title">Thông tin khóa học</h2>
-                <div class="priture" id="priture">
+                <div class="priture" id="wrapper-priture">
                     <img class="thumbnail" id="thumbnail" src="/static/img/thumbnail_default.jpg" alt="thumbnail"/>
                     <input type="file" class="upload-thumbnail" id="upload-thumbnail"/>
                 </div>
