#Commit 25/05/2022: Refactor method render template - router.

--- a/src/resource/views/components/client-component/main.hbs
+++ b/src/resource/views/components/client-component/main.hbs
@@ -12,7 +12,7 @@
     <div class="container-fluid">
         <div class="breadcrumd">
             <ul class="list-unstyled">
-                <li><a href="/home">Trang chủ</a></li>
+                <li><a href="/web">Trang chủ</a></li>
                 <li><span>Học viên</span></li>
             </ul>
         </div>
@@ -20,7 +20,7 @@
         <div class="page-main">
             <div class="page-main--header d-flex align-items-center justify-content-between">
                 <h2 class="header-title">Thành viên đăng ký</h2>
-                <a class="header-router-link-detail" href="/clients/detail?type=create">
+                <a class="header-router-link-detail" href="/web/client/detail?type=create">
                     <i class="fa fa-plus mr-2" aria-hidden="true"></i>
                     Thêm mới
                 </a>
