--- a/src/resource/views/components/client-component/detail.hbs
+++ b/src/resource/views/components/client-component/detail.hbs
@@ -12,8 +12,8 @@
     <div class="container">
         <div class="breadcrumd">
             <ul class="list-unstyled">
-                <li><a href="/home">Trang chủ</a></li>
-                <li><a href="/clients">Học viên</a></li>
+                <li><a href="/web">Trang chủ</a></li>
+                <li><a href="/web/client">Học viên</a></li>
                 <li><span>Chi tiết</span></li>
             </ul>
         </div>
