#Commit 25/05/2022: Refactor Middleware client.

--- a/src/resource/views/components/course-component/course-component.hbs
+++ b/src/resource/views/components/course-component/course-component.hbs
@@ -12,7 +12,7 @@
     <div class="container-fluid">
         <div class="breadcrumd">
             <ul class="list-unstyled">
-                <li><a href="/home">Trang chủ</a></li>
+                <li><a href="/web">Trang chủ</a></li>
                 <li><span>Khóa học</span></li>
             </ul>
         </div>
