--- a/src/resource/views/components/web-component.hbs
+++ b/src/resource/views/components/web-component.hbs
@@ -32,7 +32,7 @@
             <div class="col-10 collection-component">
                 <div class="row">
                     <div class="col-4">
-                        <a href="/courses" class="component-items d-block">
+                        <a href="/web/course" class="component-items d-block">
                             <img class="img-fluid component-items--thumbnail" src="/static/img/course.jpg" alt="">
                             <div class="component-items--content">
                                 <h2 class="content-title">Quản trị Khóa học</h2>
@@ -62,7 +62,7 @@
                         </a>
                     </div>
                     <div class="col-4">
-                        <a href="/clients" class="component-items d-block">
+                        <a href="/web/client" class="component-items d-block">
                             <img class="img-fluid component-items--thumbnail" src="/static/img/client.jpg" alt="">
                             <div class="component-items--content">
                                 <h2 class="content-title">Quản trị học viên</h2>
