--- a/src/resource/views/components/client-component/client-component.hbs
+++ b/src/resource/views/components/client-component/client-component.hbs
@@ -27,23 +27,16 @@
             </div>
             <table class="page-main-body table">
                 <thead class="thead-dark">
-                    <tr id="course-table-header"></tr>
+                    <tr id="Header"></tr>
                 </thead>
-                <tbody id="course-table-body"></tbody>
+                <tbody id="Body"></tbody>
             </table>
             <div class="undefine-data">Không có nội dung phù hợp</div>
         </div>
     </div>
     <nav aria-label="Page navigation example">
-        <ul class="pagination d-flex align-items-center justify-content-center"></ul>
+        <ul class="Pagination d-flex align-items-center justify-content-center"></ul>
     </nav>
-    
-    {{!-- <form id="test">
-        <input type="file" id="thumbnail">
-        <button type="submit">Send</button>
-    </form>
-
-    <button type="button" id="unlink">unlink file</button> --}}
 
     <script type="module" src="/static/js/client/client.js"></script>
 </body>
