--- a/src/resource/views/components/client-component/client-component.hbs
+++ b/src/resource/views/components/client-component/client-component.hbs
@@ -26,12 +26,10 @@
                 </a>
             </div>
             <table class="page-main-body table">
-                <thead class="thead-dark">
-                    <tr id="Header"></tr>
-                </thead>
+                <thead class="thead-dark"><tr id="Header"></tr></thead>
                 <tbody id="Body"></tbody>
             </table>
-            <div class="undefine-data">Không có nội dung phù hợp</div>
+            <div class="undefine-data" id="Blank-data">Không có nội dung phù hợp</div>
         </div>
     </div>
     <nav aria-label="Page navigation example">
