#Commit 29/05/2022: Refactor API - Middleware - controller page user.

--- a/src/resource/views/components/user-component/user-component.hbs
+++ b/src/resource/views/components/user-component/user-component.hbs
@@ -14,7 +14,7 @@
 
         <div class="breadcrumd">
             <ul class="list-unstyled">
-                <li><a href="/home">Trang chủ</a></li>
+                <li><a href="/web">Trang chủ</a></li>
                 <li><span>Người dùng</span></li>
             </ul>
         </div>
@@ -22,7 +22,7 @@
         <div class="page-main">
             <div class="page-main--header d-flex align-items-center justify-content-between">
                 <h3 class="header-title">Thông tin người dùng</h3>
-                <a class="header-router-link-detail" href="/users/detail?type=create">
+                <a class="header-router-link-detail" href="/web/user/detail?type=create">
                     <i class="fa fa-plus mr-2" aria-hidden="true"></i>
                     Thêm mới
                 </a>
