--- a/src/resource/views/components/user-component/user-detail-component.hbs
+++ b/src/resource/views/components/user-component/user-detail-component.hbs
@@ -13,8 +13,8 @@
     <div class="container">
         <div class="breadcrumd">
             <ul class="list-unstyled">
-                <li><a href="/home">Trang chủ</a></li>
-                <li><a href="/users">Người dùng</a></li>
+                <li><a href="/web">Trang chủ</a></li>
+                <li><a href="/web/user">Người dùng</a></li>
                 <li><span>Chi tiết</span></li>
             </ul>
         </div>
