--- a/src/resource/views/components/web-component.hbs
+++ b/src/resource/views/components/web-component.hbs
@@ -52,7 +52,7 @@
                         </a>
                     </div>
                     <div class="col-4">
-                        <a href="/users" class="component-items d-block">
+                        <a href="/web/user" class="component-items d-block">
                             <img class="img-fluid component-items--thumbnail" src="/static/img/user.jpg" alt="">
                             <div class="component-items--content">
                                 <h2 class="content-title">Quản trị Người dùng</h2>
