#Commit 30/05/2022: Refactor template - controller - API.

--- a/src/resource/views/components/course-component/unit-component/unit-component.hbs
+++ b/src/resource/views/components/course-component/unit-component/unit-component.hbs
@@ -13,9 +13,9 @@
     <div class="container-fluid">
         <div class="breadcrumd">
             <ul class="list-unstyled">
-                <li><a href="/home">Trang chủ</a></li>
-                <li><a href="/courses">Khóa học</a></li>
-                <li><span>Chương học</span></li>
+                <li><a href="/web">Trang chủ</a></li>
+                <li><a href="/web/course">Khóa học</a></li>
+                <li><span>Học phần</span></li>
             </ul>
         </div>
 
