--- a/src/resource/views/components/user-component/user-component.hbs
+++ b/src/resource/views/components/user-component/user-component.hbs
@@ -29,11 +29,11 @@
             </div>
             <table class="page-main-body table">
                 <thead class="thead-dark">
-                    <tr id="user-table-header"></tr>
+                    <tr id="Header"></tr>
                 </thead>
-                <tbody id="user-table-body"></tbody>
+                <tbody id="Body"></tbody>
             </table>
-            <div class="undefine-data">Không có nội dung phù hợp</div>
+            <div class="undefine-data" id="Blank-data">Không có nội dung phù hợp</div>
         </div>
 
         <!-- Pagination -->
