--- a/src/resource/views/components/course-component/course-component.hbs
+++ b/src/resource/views/components/course-component/course-component.hbs
@@ -20,18 +20,18 @@
         <div class="page-main">
             <div class="page-main--header d-flex align-items-center justify-content-between">
                 <h2 class="header-title">Danh mục khóa học</h2>
-                <a class="header-router-link-detail" href="/courses/detail?type=create">
+                <a class="header-router-link-detail" href="/web/course/detail?type=create">
                     <i class="fa fa-plus mr-2" aria-hidden="true"></i>
                     Thêm mới
                 </a>
             </div>
             <table class="page-main-body table">
                 <thead class="thead-dark">
-                    <tr id="course-table-header"></tr>
+                    <tr id="Header"></tr>
                 </thead>
-                <tbody id="course-table-body"></tbody>
+                <tbody id="Body"></tbody>
             </table>
-            <div class="undefine-data">Không có nội dung phù hợp</div>
+            <div class="undefine-data" id="Blank-data">Không có nội dung phù hợp</div>
         </div>
     </div>
     <nav aria-label="Page navigation example">
