--- a/src/resource/views/components/course-component/course-detail-component.hbs
+++ b/src/resource/views/components/course-component/course-detail-component.hbs
@@ -12,8 +12,8 @@
     <div class="container">
         <div class="breadcrumd">
             <ul class="list-unstyled">
-                <li><a href="/home">Trang chủ</a></li>
-                <li><a href="/courses">Khóa học</a></li>
+                <li><a href="/web">Trang chủ</a></li>
+                <li><a href="/web/course">Khóa học</a></li>
                 <li><span>Chi tiết</span></li>
             </ul>
         </div>
