#Commit 31/05/2022: Refactor Template, API, Render course - unit - lesson.

--- a/src/resource/views/components/course-component/course-component.hbs
+++ b/src/resource/views/components/course-component/course-component.hbs
@@ -26,9 +26,7 @@
                 </a>
             </div>
             <table class="page-main-body table">
-                <thead class="thead-dark">
-                    <tr id="Header"></tr>
-                </thead>
+                <thead class="thead-dark"><tr id="Header"></tr></thead>
                 <tbody id="Body"></tbody>
             </table>
             <div class="undefine-data" id="Blank-data">Không có nội dung phù hợp</div>
