--- a/src/resource/views/components/course-component/unit-component/unit-component.hbs
+++ b/src/resource/views/components/course-component/unit-component/unit-component.hbs
@@ -28,12 +28,10 @@
                 </a>
             </div>
             <table class="page-main-body table">
-                <thead class="thead-dark">
-                    <tr id="unit-table-header"></tr>
-                </thead>
-                <tbody id="unit-table-body"></tbody>
+                <thead class="thead-dark"><tr id="Header"></tr></thead>
+                <tbody id="Body"></tbody>
             </table>
-            <div class="undefine-data">Không có nội dung phù hợp</div>
+            <div class="undefine-data" id="Blank-data">Không có nội dung phù hợp</div>
         </div>
     </div>
     <nav aria-label="Page navigation example">
