--- a/src/resource/views/components/web-component.hbs
+++ b/src/resource/views/components/web-component.hbs
@@ -21,7 +21,7 @@
                             </a>
                         </li>
                         <li>
-                            <a id="user-signout">
+                            <a id="SignOut">
                                 <i class="fa fa-power-off" aria-hidden="true"></i>
                                 <span>Đăng xuất</span>
                             </a>
