--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -271,6 +271,9 @@ form {
                 text-transform: capitalize;
             }
         }
+        .hidden-group {
+            display: none;
+        }
     }
     .page-detail-register {
         .page-detail-register__content {
