--- a/src/resource/views/components/course-component/course-detail-component.hbs
+++ b/src/resource/views/components/course-component/course-detail-component.hbs
@@ -19,66 +19,60 @@
         </div>
         <div class="page-detail">
             <h2 class="page-detail--title">Thông tin khóa học</h2>
-            <form class="page-detail-form" id="course-detail">
+            <form class="page-detail-form" id="Course">
                 <div class="row">
                     <div class="col-6">
                         <div class="form-group">
-                            <label class="form-group--label" for="course-code">Mã khóa học</label>
-                            <input type="text" class="form-control" id="course-code" disabled placeholder="Mã code">
+                            <label class="form-group--label" for="Name">Tên khóa học</label>
+                            <input type="text" class="form-control" id="Name">
                             <span class="form-message"></span>
                         </div>
                         <div class="form-group">
-                            <label class="form-group--label" for="course-name">Tên khóa học</label>
-                            <input type="text" class="form-control" id="course-name">
-                            <span class="form-message"></span>
-                        </div>
-                        <div class="form-group">
-                            <label class="form-group--label" for="course-type">Loại khóa học</label>
-                            <select class="custom-select" id="course-type">
+                            <label class="form-group--label" for="Type">Loại khóa học</label>
+                            <select class="custom-select" id="Type">
                                 <option selected value="default">Chọn loại khóa học</option>
                                 <option value="FE">Font-End</option>
                                 <option value="BE">Back-End</option>
                             </select>
                             <span class="form-message"></span>
                         </div>
-                        <div class="form-group">
-                            <label class="form-group--label" for="course-lesson">Số bài giảng hiện có</label>
-                            <input type="text" class="form-control" id="course-unit" disabled
-                                aria-describedby="emailHelp">
-                            <span class="form-message"></span>
-                        </div>
                     </div>
                     <div class="col-6">
                         <div class="form-group">
-                            <label class="form-group--label" for="course-author">Tác giả</label>
-                            <input type="text" class="form-control" id="course-author">
+                            <label class="form-group--label" for="Author">Tác giả</label>
+                            <input type="text" class="form-control" id="Author">
                             <span class="form-message"></span>
                         </div>
                         <div class="form-group">
-                            <label class="form-group--label" for="course-create-date">Ngày tạo</label>
-                            <input type="datetime-local" step="0.001" class="form-control" id="course-create-date">
+                            <label class="form-group--label" for="AmountUnit">Học phần hiện có</label>
+                            <input type="text" class="form-control" id="AmountUnit" disabled
+                                aria-describedby="emailHelp">
                             <span class="form-message"></span>
                         </div>
-                        <div class="form-group">
-                            <label class="form-group--label" for="course-edit-last-date">Cập nhật gần đây</label>
-                            <input type="datetime-local" step="0.001" class="form-control" id="course-edit-last-date">
+                        <div class="form-group hidden-group">
+                            <label class="form-group--label" for="CreateDate">Ngày tạo</label>
+                            <input type="datetime-local" step="0.001" class="form-control" id="CreateDate">
                             <span class="form-message"></span>
                         </div>
-                        <div class="form-group">
-                            <label class="form-group--label" for="course-thumbnail">Ảnh đại diện khóa học</label>
-                            <input type="text" class="form-control" id="course-thumbnail" aria-describedby="emailHelp">
+                        <div class="form-group hidden-group">
+                            <label class="form-group--label" for="EditDate">Cập nhật gần đây</label>
+                            <input type="datetime-local" step="0.001" class="form-control" id="EditDate">
+                            <span class="form-message"></span>
+                        </div>
+                        <div class="form-group hidden-group">
+                            <label class="form-group--label" for="Thumbnail">Ảnh đại diện khóa học</label>
+                            <input type="text" class="form-control" id="Thumbnail">
                             <span class="form-message"></span>
                         </div>
                     </div>
                     <div class="col-12">
                         <div class="form-group">
-                            <label class="form-group--label" for="course-description">Mô tả khóa học</label>
-                            <textarea class="form-control" id="course-description" rows="3"></textarea>
+                            <label class="form-group--label" for="Description">Mô tả khóa học</label>
+                            <textarea class="form-control" id="Description" rows="3"></textarea>
                             <span class="form-message"></span>
                         </div>
                     </div>
                 </div>
-
                 <div class="users-detail--serect">
                     <button type="submit" class="btn-executed btn">Submit</button>
                     <button type="button" id="come-back" class="btn">Quay lại</button>
