#Commit 04/06/2022: Refactor API - Template - Middleware - Controller.

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -206,6 +206,8 @@ form .form-group .password-control {
     text-transform: capitalize; }
   .page-detail .page-detail-form .hidden-group {
     display: none; }
+    .page-detail .page-detail-form .hidden-group.active {
+      display: block; }
   .page-detail .page-detail-register .page-detail-register__content {
     box-shadow: 0 0 2px #00000030;
     padding: 15px; }
