--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -273,6 +273,9 @@ form {
         }
         .hidden-group {
             display: none;
+            &.active {
+                display: block;
+            }
         }
     }
     .page-detail-register {
