--- a/src/resource/views/components/course-component/course-detail-component.hbs
+++ b/src/resource/views/components/course-component/course-detail-component.hbs
@@ -36,6 +36,11 @@
                             </select>
                             <span class="form-message"></span>
                         </div>
+                        <div class="form-group hidden-group">
+                            <label class="form-group--label" for="CreateDate">Ngày tạo</label>
+                            <input type="datetime-local" step="0.001" class="form-control" id="CreateDate" disabled>
+                            <span class="form-message"></span>
+                        </div>
                     </div>
                     <div class="col-6">
                         <div class="form-group">
@@ -44,24 +49,13 @@
                             <span class="form-message"></span>
                         </div>
                         <div class="form-group">
-                            <label class="form-group--label" for="AmountUnit">Học phần hiện có</label>
-                            <input type="text" class="form-control" id="AmountUnit" disabled
-                                aria-describedby="emailHelp">
+                            <label class="form-group--label" for="Unit">Học phần hiện có</label>
+                            <input type="text" class="form-control" id="Unit" disabled>
                             <span class="form-message"></span>
                         </div>
                         <div class="form-group hidden-group">
-                            <label class="form-group--label" for="CreateDate">Ngày tạo</label>
-                            <input type="datetime-local" step="0.001" class="form-control" id="CreateDate">
-                            <span class="form-message"></span>
-                        </div>
-                        <div class="form-group hidden-group">
-                            <label class="form-group--label" for="EditDate">Cập nhật gần đây</label>
-                            <input type="datetime-local" step="0.001" class="form-control" id="EditDate">
-                            <span class="form-message"></span>
-                        </div>
-                        <div class="form-group hidden-group">
-                            <label class="form-group--label" for="Thumbnail">Ảnh đại diện khóa học</label>
-                            <input type="text" class="form-control" id="Thumbnail">
+                            <label class="form-group--label" for="UpdateDate">Cập nhật gần đây</label>
+                            <input type="datetime-local" step="0.001" class="form-control" id="UpdateDate" disabled>
                             <span class="form-message"></span>
                         </div>
                     </div>
