--- a/src/resource/views/components/user-component/user-component.hbs
+++ b/src/resource/views/components/user-component/user-component.hbs
@@ -15,13 +15,13 @@
         <div class="breadcrumd">
             <ul class="list-unstyled">
                 <li><a href="/web">Trang chủ</a></li>
-                <li><span>Người dùng</span></li>
+                <li><span>Thông tin quản trị</span></li>
             </ul>
         </div>
 
         <div class="page-main">
             <div class="page-main--header d-flex align-items-center justify-content-between">
-                <h3 class="header-title">Thông tin người dùng</h3>
+                <h3 class="header-title">Thông tin quản trị viên</h3>
                 <a class="header-router-link-detail" href="/web/user/detail?type=create">
                     <i class="fa fa-plus mr-2" aria-hidden="true"></i>
                     Thêm mới
