--- a/src/assets/css/users.css
+++ b/src/assets/css/users.css
@@ -26,6 +26,50 @@
     letter-spacing: .3px;
     margin-bottom: 30px;
     text-transform: uppercase; }
+  .users-detail .page-detail--information {
+    display: flex;
+    align-items: flex-start; }
+    .users-detail .page-detail--information .priture {
+      display: none;
+      margin-left: auto;
+      margin-right: 0px;
+      position: relative; }
+      .users-detail .page-detail--information .priture .thumbnail {
+        border-radius: 2px;
+        box-shadow: 0 0 2px #00000030;
+        height: 100px;
+        padding: 3px;
+        width: 100px; }
+      .users-detail .page-detail--information .priture .upload-thumbnail {
+        bottom: 0px;
+        display: inline-block;
+        left: 0px;
+        height: 25px;
+        overflow: hidden;
+        position: absolute;
+        width: 25px; }
+        .users-detail .page-detail--information .priture .upload-thumbnail:before {
+          background-color: #f28d0f;
+          border-radius: 2px;
+          color: #ffffff;
+          font-family: "FontAwesome";
+          font-weight: 500;
+          font-size: 14px;
+          content: "\f044";
+          display: inline-block;
+          height: 25px;
+          line-height: 25px;
+          text-align: center;
+          width: 25px;
+          vertical-align: middle; }
+      .users-detail .page-detail--information .priture.active {
+        display: block; }
+  .users-detail .page-detail--roll-back {
+    margin-right: 5px; }
+    .users-detail .page-detail--roll-back i.fa {
+      color: #f28d0f;
+      font-size: 25px;
+      margin-top: 2px; }
   .users-detail #users-detail--info .title--input {
     font-size: 13px;
     font-weight: 700;
