--- a/src/resource/views/components/user-component/user-detail-component.hbs
+++ b/src/resource/views/components/user-component/user-detail-component.hbs
@@ -14,12 +14,19 @@
         <div class="breadcrumd">
             <ul class="list-unstyled">
                 <li><a href="/web">Trang chủ</a></li>
-                <li><a href="/web/user">Người dùng</a></li>
+                <li><a href="/web/user">Thông tin quản trị</a></li>
                 <li><span>Chi tiết</span></li>
             </ul>
         </div>
         <div class="users-detail my-3">
-            <h2 class="users-detail--title">User detail title</h2>
+            <div class="page-detail--information">
+                <div class="page-detail--roll-back" id="roll-back"><i class="fa fa-angle-double-left" aria-hidden="true"></i></div>
+                <h2 class="users-detail--title">User detail title</h2>
+                <div class="priture" id="wrapper-priture">
+                    <img class="thumbnail" id="thumbnail" src="/static/img/thumbnail_default.jpg" alt="thumbnail"/>
+                    <input type="file" class="upload-thumbnail" id="upload-thumbnail"/>
+                </div>
+            </div>
             <form id="User">
                 <div class="row">
                     <div class="col-6">
