#Commit 05/06/2022: Add Template - Middleware - Controller upload thumbnail.

--- a/src/assets/css/users.css
+++ b/src/assets/css/users.css
@@ -65,7 +65,8 @@
       .users-detail .page-detail--information .priture.active {
         display: block; }
   .users-detail .page-detail--roll-back {
-    margin-right: 5px; }
+    margin-right: 5px;
+    cursor: pointer; }
     .users-detail .page-detail--roll-back i.fa {
       color: #f28d0f;
       font-size: 25px;
