--- a/src/resource/scss/users.scss
+++ b/src/resource/scss/users.scss
@@ -81,6 +81,7 @@
     }
     .page-detail--roll-back {
         margin-right: 5px;
+        cursor: pointer;
         i.fa {
             color: #f28d0f;
             font-size: 25px;
